implement media query for background

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <article>
       <div class="card">
         <div class="card-header">
-          <img src="images/bg-pattern-card.svg"  aria-hidden=“true” role="img" />
+          <img src="images/bg-pattern-card.svg" alt="" aria-hidden="true" role="img" />
           <div class="card-picture">
             <img src="images/image-victor.jpg" alt="Card profile picture " >
           </div>
@@ -24,9 +24,14 @@
           <h1>Victor Crest <span>26 <br>London</span></h1>
           <hr>
           <div class="card-stats">
-            <p><span >80K</span><br>Followers</p>
+            <ul>
+              <li><span >80K</span><br>Followers</li>
+              <li><span>803K</span><br>Likes</li>
+              <li><span>1.4K</span><br>Photos</li>
+            </ul>
+            <!-- <p><span >80K</span><br>Followers</p>
             <p><span>803K</span><br>Likes</p>
-            <p><span>1.4K</span><br>Photos</p>
+            <p><span>1.4K</span><br>Photos</p> -->
           </div>
         </div>    
       </div>
